--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,3 @@
-.game-container{width:100vw;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:center}
+.game-container{width:100vw;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:center;background:#fff}
 
 /*# sourceMappingURL=main.css.map*/
