--- a/src/game.css
+++ b/src/game.css
@@ -1,8 +1,12 @@
+body {
+  overflow: hidden;
+}
+
 .game-container {
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background: #fff;
 }
