--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,3 @@
-body{overflow:hidden}.game-container{width:100vw;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:flex-start;background:#fff}
+body{overflow:hidden}.game-container{width:100vw;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:flex-start;background:#1b1b1b}
 
 /*# sourceMappingURL=main.css.map*/
