--- a/src/game.css
+++ b/src/game.css
@@ -8,5 +8,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background: #fff;
+  background: rgb(27, 27, 27);
 }
