--- a/src/game.css
+++ b/src/game.css
@@ -8,6 +8,8 @@ body {
 .game-container {
   width: 100vw;
   height: 100vh;
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: flex-start;
