--- a/main.css
+++ b/main.css
@@ -1,3 +1,3 @@
-body,html{-webkit-overflow-scrolling:touch;position:fixed;overflow:hidden}.game-container{width:100vw;height:100vh;padding:0;margin:0;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:flex-start;background:#1b1b1b}
+body,html{-webkit-overflow-scrolling:touch;position:fixed;padding:0;margin:0;overflow:hidden}.game-container{width:100vw;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:flex-start;background:#1b1b1b}
 
 /*# sourceMappingURL=main.css.map*/
